web/components/Grid/grid.scss
.sq-grid {
  
  &__row {
    display: flex;
  }
  &__row-wrapper {
    .sq-grid__data-cell {
      border-bottom: solid 2px $sq-color-muted-lighter;
    }
    &:last-child {
      .sq-grid__data-cell {
        border-bottom: none;
      }
    }
  }
  &--has-action {
    .sq-grid__body .sq-grid__row {
      cursor: pointer;
      &:hover {
        .sq-grid__data-cell {
          background-color: $sq-color-gray-lightest;
        }
      }
    }
  }

  &__header-row,
  &__data {
    &-cell {
      flex-basis: 250px;
      display: flex;
      align-items: center;
      justify-content: left;
    }
  }
  &__header-row {
    color: #333;
    height: 100%;
    &-cell {
      border-top: solid 1px #cfd7df;
      border-bottom: solid 1px #cfd7df;
      line-height: 36px;
      font-weight: bold;
      font-size: 10px;
      text-transform: uppercase;
      overflow: hidden;
      &-wrapper {
        width: 100%;
        padding: 5px 10px;
        @media (min-width: $screen-sm) {
          padding: 10px 20px;
        }
      }
      &-text {
        width: 100%;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        
      }
      &.sort-enable {
        .sq-grid__header-row-cell-wrapper {
          border-right: solid 2px transparent;
          transition: all ease 300ms;
        }
        &:hover {
          .sq-grid__header-row-cell-wrapper {
            background-color: #edf4f6;
            border-right: solid 2px $sq-color-primary-lighter;
          }
        }
      }
    }
  }

  &__data {
    &-cell {
      padding: 10px;
      > span {
        max-width: 100%;
      }
      @media (min-width: $screen-sm) {
        padding: 5px 20px;
        min-height: 36px;
      }
    }
  }
  &--striped {
    .sq-grid__row-wrapper {
      &:nth-child(even) {
        background: $gray-lighter;
      }
    }
  }

  &__actions {
    text-align: right;
    padding: 20px;
  }
  &__no-data {
    padding: 20px 0;
  }

  &-header {
    &--sortable {
      .sq-grid__header-row-cell.sort-enable {
        .sq-grid__header-row-cell-wrapper {
          padding-right: 24px;
          height: 100%;
        }
        position: relative;
        cursor: pointer;
      }
      .sq-grid__cell-sort {
        position: absolute;
        right: 5px;
        top: 0;
        bottom: 0;
        margin: auto;
      }
    }
  }

  .sq-grid__header-row-cell {
    background-color: $sq-color-gray-lightest;
    flex-basis: 250px;
    justify-content: flex-start;
    flex-grow: 0;
    flex-shrink: 0;
  }
  .sq-grid__data-cell {
    flex-grow: 0;
    flex-shrink: 0;
    overflow: hidden;
    flex-basis: 250px;
    justify-content: flex-start;
  }
  &__col-filters {
    &__item {
      display: flex;
      align-items: center;
      border: solid 1px $sq-color-gray-lightest;
      padding: 4px;
      margin: 2px 0;
      &.dragging {
        background-color: $sq-color-gray-lightest;
      }
    }
    &__checkbox {
      .MuiFormControlLabel-root {
        margin: 0;
      }
    }
  }

  &--fixed {
    height: 100%;
    display: flex;
    flex-direction: column;
    .sq-grid__header {
      overflow: hidden;
    }
    .sq-grid__body {
      height: 100%;
      width: 100%;
      overflow: auto;
      flex-grow: 1;
    }
  }
}

